--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@headlessui/react": "^2.1.8",
     "@heroicons/react": "^2.1.5",
+    "@tailwindcss/vite": "^4.0.17",
     "@tanstack/react-form": "^0.40.2",
     "@tanstack/react-query": "^5.61.0",
     "@tanstack/react-router": "^1.82.1",
@@ -26,6 +27,8 @@
     "zod": "^3.24.1"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.0.6",
+    "@tailwindcss/typography": "^0.5.4",
     "@tanstack/eslint-plugin-query": "^5.58.1",
     "@tanstack/router-devtools": "^1.58.3",
     "@tanstack/router-plugin": "^1.58.4",
@@ -42,7 +45,7 @@
     "eslint-plugin-react-refresh": "^0.4.5",
     "globals": "^15.11.0",
     "postcss": "^8.4.17",
-    "tailwindcss": "^3.1.8",
+    "tailwindcss": "^4.0.15",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.11.0",
     "vite": "^5.4.10"
